--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body{
     width: 100%;
-    background-color: blue;
+    background-color:rgb(92, 20, 225);
 
     
 
@@ -12,12 +12,17 @@ body{
 
 
 .container{
-    height:auto;
+    height: 100%;
     display: flex;
     justify-content:center;
     flex-direction: column;
     align-items: center;
-    padding:50px;
+    padding-bottom: 50px;
+    padding-top: 50px ;
+
+
+    
+    
 }
 
 .formgroup{
@@ -26,6 +31,7 @@ body{
     height:auto;
     padding:20px;
     background:white;
+
 }
 
 .inputgroup{
@@ -34,6 +40,8 @@ body{
     display:flex;
     flex-direction: column;
     margin-bottom:20px;
+    font-family:  century gothic;
+    font-weight: 400;
 }
 
 .inputgroup input{
@@ -44,17 +52,22 @@ body{
     outline:none;
     border-bottom:1px solid grey;
     font-size:15px;
+    
 }
 .formgroup h1{
     margin:20px 0;
     text-align:center;
     color:#000;
+    font-family: microsoft new tai lue ;
+    font-size: 40px;
+    font-style: bold;
 }
 .formgroup a{
     float:right;
     text-decoration:none;
     color:black;
     margin-bottom:20px;
+
 }
 
 .formgroup button{
@@ -62,7 +75,7 @@ body{
     border-radius: 50px;
     height:30px;
     border:0;
-    background: linear-gradient(to left, blue, purple);
+    background: linear-gradient(to right, blue, purple);
     color:white;
     text-transform:uppercase;
     font-weight: 500;
@@ -76,27 +89,43 @@ body{
 }
 
 .formgroup .social{
-    width:100%;
+    width: 100%;
     height:40px;
     display: flex;
     justify-content:center;
     gap:30px;
+    margin-bottom: 20px;
 }
 
 
 .formgroup .social .socialicon{
     width:40px;
-    height:40px;
-    border-radius:100%;
+    height:40px; 
+    border-radius: 100%;
     display: flex;
     justify-content:center ;
     align-items: center;
-}
+    text-align: center;
+    
 
-.socialicon img{
-    width:30px;
-    height:30px;
+}   
+
+.socialicon1 img{
+    width: 45px;
+    margin-bottom: 50px;
+    margin-left: 80px;
+    
 }
+.socialicon2 img{
+    width: 32px; 
+    margin-top: 2px;
+    
+}
+.socialicon3 img{
+    width: 25px;
+    margin-right: 80px;
+    column-gap: 50px;
+} 
 
 .icon {
     width:30px;
@@ -108,5 +137,17 @@ body{
 
 .icon img{
     width:inherit;
-    height:inherit;
+    height:inherit ;
+
 }
+.anchor{
+    font-family: century gothic;
+    font-weight: 548;
+    font-size: small;
+    padding-bottom: 20px;
+}
+.Signup{
+    font-family: century gothic ;
+    font-size: small;
+}
+
