--- a/loging.css
+++ b/loging.css
@@ -68,6 +68,7 @@ span {
     height: 75%;
    
 }
+ 
 
 .input {
     width:60%;
@@ -105,4 +106,189 @@ span {
     /* left: 150px;  */
     text-align: center;
 }
+
+
+
+/* styling icons */
   
+   
+
+.social{
+    display: inline-flex;
+    margin-top: 20px;
+    
+}
+
+
+.socialicon1 img{
+    width:45px;
+    margin-bottom: 50px;
+    margin-left: 80px;
+    
+}
+.socialicon2 img{
+    width:32px; 
+    margin-top: 2px;
+    position: relative;
+    margin-left: 50px;
+    margin-right: 50px;
+    
+    
+}
+.socialicon3 img{
+    width: 32px;
+    margin-right: 80px;
+    column-gap: 50px;
+} 
+
+.icon {
+    width:30px;
+    height:auto;
+    position:absolute;
+    left:0px;
+    bottom:0px;
+}
+
+
+     
+
+
+
+/* m*/
+
+@media screen and (max-width:425px) {
+    
+    *{
+
+    
+    }
+
+
+    .container {
+        position: absolute;
+        width: 280px;
+        height: 550px;
+        top: 10%;
+        left: 10%;
+        display: flex;
+        /* border: 5px solid black; */
+        border-radius: 10px;
+        background-color: rgb(255, 255, 255);
+        justify-content: center;
+    }
+    
+    .user-icon {
+        width: 0rem;
+        height: 0rem;
+        position: relative;
+        left: 0rem;
+        top: 0rem;
+        /* background-color: aliceblue; */
+    }
+    
+
+
+.photo {
+    /* border: 5px solid black; */
+
+    margin-top: 10% ;
+    width: 0rem;
+    height: 0rem;
+    
+    
+    
+    background-color:rgba(240, 248, 255, 0.753);
+}
+
+.sign-in > h2 {
+    font-size: 200%;
+    text-align: center;
+    color: Black;
+    position: relative;
+    visibility: hidden;
+    margin: 0.5rem 0.5rem;
+    padding-right: 200px;
+    top: -15px;
+}
+
+.sign-in > h2:after{
+    visibility: visible;
+    position: absolute;
+    content: "LOGIN";
+}
+
+
+  .form {
+    /* border: 2px solid black; */
+    position: relative;
+    top: 25px;
+    /* left: 0%; */
+    height: 75%;
+}
+
+.input {
+    width: 55%;
+    height: 2rem;
+    margin: 0.5rem 1.5rem 0rem 3rem;
+    border: none;
+    border-radius: 40px;
+    background-color: rgb(203, 213, 223);
+    padding-left: 40px;
+    font-size: larger;
+    
+}
+.button {
+    position: relative;
+    border: none;
+    border-radius: 40px;
+    width: 65%;
+    height: 2rem;
+    background-color:rgba(114, 18, 114, 0.418);
+    font-size: larger;
+    margin-left: 3.5rem;
+    margin-top: 20px;
+    color: white;
+    
+}
+.pw-reset {
+
+    visibility: hidden;
+}
+.pw-reset:after{
+    font-size: large;
+    visibility: visible;
+    content: "Forget password?";
+    position: absolute;
+    left: 135px;
+}
+
+.form .create-acc {
+  visibility: hidden;
+
+}
+
+.form .create-acc:after {
+    visibility: visible;
+    content: "Or Sign Up Using";
+    position: absolute;
+    bottom: 45px;
+    left: 90px;
+
+  }
+  
+  .social {
+    display: inline-flex;
+    position: absolute;
+    bottom: 30px;
+}
+
+.socialicon2 img{
+    
+    position: relative;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    
+}
+
+}
